--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <script>location.replace("/nav");</script>
+    <script>location.replace("./nav/index.html");</script>
 
 </body>
 </html>
