--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Compsci 10 finalproject</title>
+    <script src="common.js"></script>
 </head>
 <body>
-    
-    <script>location.href = "nav/index.html";</script>
+
+    <script>
+
+        changePage("/nav/index.html");
+
+    </script>
 
 </body>
 </html>
