--- a/nav/index.html
+++ b/nav/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="mainnav.css">
 
     <script src="mainnav.js" defer type="module"></script>
+    <script src="../common.js"></script>
 
 </head>
 
