--- a/snakegame/snake.html
+++ b/snakegame/snake.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="snake.css">
 
   <script src="game.js" defer type="module"></script>
+  <script src="../common.js"></script>
 
 </head>
 
