--- a/nav/credits.html
+++ b/nav/credits.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="credits.css">
 
     <script src="credits.js" defer type="module"></script>
+    <script src="../common.js"></script>
 
 </head>
 
