--- a/reaction/reaction.html
+++ b/reaction/reaction.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="reaction.css">
 
     <script src="game2.js" defer type="module"></script>
+    <script src="../common.js"></script>
 </head>
 
 <body>
