--- a/snakegame/snakevarsel/snakevarsel.html
+++ b/snakegame/snakevarsel/snakevarsel.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="snakevarsel.css">
     <script src="snakevarsel.js" defer type="module"></script>
+    <script src="../../common.js"></script>
     <title>Variables</title>
 </head>
 
