--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compsci 10 finalproject</title>
-    <script src="common.js"></script>
+    <script src="index.js" defer type="module"></script>
 </head>
 <body>
-
-    <script>
-
-        changePage("/nav/index.html");
-
-    </script>
 
 </body>
 </html>
