--- a/snakegame/snakevarsel/snakevarsel.html
+++ b/snakegame/snakevarsel/snakevarsel.html
@@ -67,6 +67,12 @@
 
         </div>
 
+        <div id="middleBox">
+
+            <h1 id="instruction">Move with the arrow keys, collect yellow food to grow, avoid hitting the edges or yourself.</h1>
+
+        </div>
+
         <div id="bottomBox">
 
             <div id="start">
